# oop_lab2

./: CMakeLists.txt  Doxyfile  coverage.html  main.cpp
sentence/: CMakeLists.txt  sentence.cpp  sentence.h
tests/: coverage.html  testing.cpp
word/: CMakeLists.txt  word.cpp  word.h
